--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,3 +76,31 @@
         @apply bg-background text-foreground;
     }
 }
+
+.event-title{
+    background: linear-gradient(130deg, #6e4ee4, hsl(272.43deg 100% 74.07%));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    display: inline-block;
+    width: auto;
+}
+
+.event-qr{
+    overflow: hidden;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0px 3px 8px #0002;
+}
+.event-qr::after {
+    content: " ";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(to top left,#8B55FF,#6e4ee4);
+    mix-blend-mode: lighten;
+    
+}
